--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     />
     <title>Task List</title>
   </head>
-  <body>
+  <body style="background-color: #2bbbad">
     <div class="container">
       <div class="row">
         <div class="col s12">
